# kaze_backend

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  output.typ  trash.json
artifacts/: branch.json  branch.sh  branch_id.txt  delete_offer.sh  offer.json  offer_sharing_id.sh  offer_sharing_id.txt  offer_signing_id.sh  offer_signing_id.txt  request_sharing.sh
bench/: Cargo.toml  docker-compose.yml  generate.csv  load_test.js  prometheus.yml  sharing.csv
bench/1.0/: generate.csv  sharing.csv
bench/results/: graph.py
bench/results/1.0/: generate.csv  sharing.csv  signing.csv
bench/results/10.0/: generate.csv  sharing.csv  signing.csv
bench/results/11.0/: generate.csv  sharing.csv  signing.csv
bench/results/12.0/: generate.csv  sharing.csv  signing.csv
bench/results/13.0/: generate.csv  sharing.csv  signing.csv
bench/results/14.0/: generate.csv  sharing.csv  signing.csv
bench/results/15.0/: generate.csv  sharing.csv  signing.csv
bench/results/16.0/: generate.csv  sharing.csv  signing.csv
bench/results/17.0/: generate.csv  sharing.csv  signing.csv
bench/results/18.0/: generate.csv  sharing.csv  signing.csv
bench/results/19.0/: generate.csv  sharing.csv  signing.csv
bench/results/2.0/: generate.csv  sharing.csv  signing.csv
bench/results/20.0/: generate.csv  sharing.csv  signing.csv
bench/results/21.0/: generate.csv  sharing.csv  signing.csv
bench/results/22.0/: generate.csv  sharing.csv  signing.csv
bench/results/23.0/: generate.csv  sharing.csv  signing.csv
bench/results/24.0/: generate.csv  sharing.csv  signing.csv
bench/results/25.0/: generate.csv  sharing.csv  signing.csv
bench/results/26.0/: generate.csv  sharing.csv  signing.csv
bench/results/27.0/: generate.csv  sharing.csv  signing.csv
bench/results/28.0/: generate.csv  sharing.csv  signing.csv
bench/results/29.0/: generate.csv  sharing.csv  signing.csv
bench/results/3.0/: generate.csv  sharing.csv  signing.csv
bench/results/30.0/: generate.csv  sharing.csv  signing.csv
bench/results/4.0/: generate.csv  sharing.csv  signing.csv
bench/results/5.0/: generate.csv  sharing.csv  signing.csv
bench/results/6.0/: generate.csv  sharing.csv  signing.csv
bench/results/7.0/: generate.csv  sharing.csv  signing.csv
bench/results/8.0/: generate.csv  sharing.csv  signing.csv
bench/results/9.0/: generate.csv  sharing.csv  signing.csv
bench/src/: common.rs  main.rs
bench/tests/: mockup_signature
checkpoint/: cache.json
deploy/db/migrations/: 20250729150828_initial.sql
deploy/nginx/: kazeapi.uk
deploy/systemd/: kaze-valgrind.service  kaze.service  tunnel.service
libs/eusign/certificates/: CA-2025-02-03-15-41-27-774-0287.p7b  Diia_2024-KEP.cer  Diia_2024.cer  EU-5E984D526F82F38F040000007383AE017103E805.cer  EU-5E984D526F82F38F040000007383AE017203E805.cer
libs/eusign/interface/: header.h
libs/eusign/pkey/: key_1134326253_1134326253.jks
libs/eusign/settings/: CAs.Test.Old.json  CAs.Test.json  CAs.json
libs/eusign/shared/: DSTU4145CacheN.cap  DSTU4145CacheP.cap  euscpct
resources/typst/: rental_agreement.typ  rental_agreement_template.typ
src/: lib.rs  main.rs
src/commands/: mod.rs  server.rs
src/commands/subcommands/: server.rs
src/commands/subcommands/server/: mod.rs
src/routes/: diia_sharing.rs  diia_signature.rs  mod.rs  request_id.rs
src/routes/agreement/: demo.rs  generate.rs  get.rs  get_sign_link.rs  get_signed.rs  mod.rs  remove.rs  sign.rs  status.rs
src/routes/diia/: mod.rs  sharing.rs  signature.rs
src/routes/generate/: mod.rs
src/routes/user/: get_sharing_link.rs  is_authorized.rs  mod.rs  name.rs  remove.rs
src/utils/: agreement.rs  cache.rs  config.rs  db.rs  diia.rs  eusign.rs  mod.rs  s3.rs  secrets.rs  server_error.rs  shutdown.rs  typst.rs  verify_jwt.rs
src/utils/shutdown/: mod.rs
tests/: common.rs  integration_bench.rs
