[package]
name = "kaze_backend"
version = "0.1.0"
edition = "2021"
authors = ["Demchuk Nazar"]

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
axum = { version = "0.8.1", features = ["tokio", "macros", "multipart"] }
axum-server = "0.7.1"
http = "1.2.0"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "signal", "fs"] }
tower-http = { version = "0.6.2", features = ["cors"] }
serde = { version = "1.0.217", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde_json = "1.0.138"
toml = "0.8.20"
anyhow = "1.0.95"
base64 = "0.22.1"
moka = {version = "0.12.10", features = ["future"]}
typst = "0.12.0"
chrono = {version = "0.4.39", features = ["serde"]}
typst-pdf = { version = "0.12.0" }
regex = "1.11.1"

# aws-config = { version = "1.5.15", features = ["behavior-version-latest"] }
# aws-sdk-secretsmanager = { version = "1.61.0" }


[build-dependencies]
bindgen = "0.71.0"
