[package]
name = "kaze_backend"
version = "0.1.0"
edition = "2021"
authors = ["Demchuk Nazar"]

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
axum = { version = "0.8.1", features = ["tokio", "macros", "multipart"] }
axum-server = "0.7.1"
http = "1.2.0"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "signal", "fs"] }
tower-http = { version = "0.6.2", features = ["cors"] }
serde = { version = "1.0.217", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde_json = "1.0.138"
toml = "0.8.20"
anyhow = "1.0.95"
base64 = "0.22.1"
moka = {version = "0.12.10", features = ["future"]}
typst = "0.12.0"
chrono = {version = "0.4.39", features = ["serde"]}
typst-pdf = { version = "0.12.0" }
regex = "1.11.1"
chrono-tz = {version = "0.10.1", features = ["serde"]}
serde_with = { version = "3.12.0", features = ["base64"] }
ureq = "3.0.5"
ttf-parser = "0.25.1"
zune-inflate = "0.2.54"
tar = "0.4.43"
time = "0.3.37"
rs-firebase-admin-sdk = "2.3.1"
reqwest = "0.12.12"
axum-extra = { version = "0.10.0", features = ["typed-header"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres", "json", "time", "chrono"] }
aws-config = { version = "1.5.15", features = ["behavior-version-latest"] }
aws-sdk-secretsmanager = { version = "1.61.0" }
aws-sdk-s3 = "1.79.0"
rustls = { version = "0.23.25", features = ["ring"] }


[build-dependencies]
bindgen = "0.71.0"
