[package]
name = "kaze_backend"
version = "0.1.0"
edition = "2021"
authors = ["Demchuk Nazar"]

[dependencies]
clap = { version = "4.5.34", features = ["derive"] }
axum = { version = "0.8.1", features = ["tokio", "macros", "multipart"] }
axum-server = "0.7.1"
http = "1.2.0"
tokio = { version = "1.44.1", features = ["rt-multi-thread", "signal", "fs"] }
tower-http = { version = "0.6.2", features = ["cors"] }
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde_json = "1.0.140"
toml = "0.8.20"
anyhow = "1.0.97"
base64 = "0.22.1"
moka = {version = "0.12.10", features = ["future"]}
typst = "0.13.1"
chrono = {version = "0.4.40", features = ["serde"]}
typst-pdf = { version = "0.13.1" }
regex = "1.11.1"
chrono-tz = {version = "0.10.3", features = ["serde"]}
serde_with = { version = "3.12.0", features = ["base64"] }
ureq = "3.0.10"
ttf-parser = "0.25.1"
zune-inflate = "0.2.54"
tar = "0.4.44"
time = "0.3.41"
rs-firebase-admin-sdk = "2.4.0"
reqwest = "0.12.15"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres", "json", "chrono"] }
aws-config = { version = "1.6.1", features = ["behavior-version-latest"] }
aws-sdk-secretsmanager = { version = "1.68.0" }
aws-sdk-s3 = "1.81.0"
rustls = { version = "0.23.25", features = ["ring"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
deranged = "=0.4.0"


[build-dependencies]
bindgen = "0.71.1"
