[package]
name = "bench"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.40", features = ["serde"] }
csv = "1.3.1"
http = "1.3.1"
reqwest = { version = "0.12.15", features = ["multipart", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
toml = "0.8.20"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "std"] }
futures = "0.3.31"
